Adding mixins and starting on tooltip docs

--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -140,8 +140,12 @@ block fullPane
           </ul>
         </div>
 
-    Also notice component names are kept simple and never use a space
-    character like `.nav-bar` or camel-casing like `.navBar`.
+    Component names try to remain simple, however sometimes a space
+    character is needed. The underscore (_) character is reserved for this.
+
+        <div class="tooltip_trigger">
+          <span class="tooltip"></span>
+        </div>
 
     ## Modifiers
 
