--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -1,27 +1,27 @@
 extends ../../layout
 
 mixin colors 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") Hover&nbsp;
     .label I'm a tooltip!
 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") over&nbsp;
     .label.red I'm a tooltip!
 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") any&nbsp;
     .label.orange I'm a tooltip!
 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") of&nbsp;
     .label.yellow I'm a tooltip!
 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") these&nbsp;
     .label.green I'm a tooltip!
 
-  .tooltip-trigger
+  .tooltip_trigger
     a(href="#") words&nbsp;
     .label.blue I'm a tooltip!
 
@@ -56,14 +56,14 @@ block basic
           </div>
 
           .decision {
-            @include tooltip-trigger();
+            @include tooltip_trigger();
           }
           .close {
             @include button();
           }
 
   :markdown 
-    When hovering over `.tooltip-trigger`, any `.tooltip`
+    When hovering over `.tooltip_trigger`, any `.tooltip`
     classes contained inside will become visible.
 
 
@@ -74,7 +74,7 @@ block basic
     :markdown
       <span>
 
-          <div class="tooltip-trigger">
+          <div class="tooltip_trigger">
             <button class="button">Close</button>
             <span class="tooltip">Make sure you've finished your application!</span>
           </div>
@@ -89,7 +89,7 @@ block basic
           </div>
 
           .decision {
-            @include tooltip-trigger();
+            @include tooltip_trigger();
           }
           .close {
             @include button();
