Getting ready to separate base and dependent components

--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -16,4 +16,5 @@
 @import ../components/_notifications
 @import ../components/_tables
 @import ../components/_tiles
+@import ../components/_tooltips
 @import ../components/_typography
