--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -111,6 +111,12 @@ table
 .tile
   +tile
 
+// TOOLTIPS
+// --------
+
+.tooltip_trigger
+  +tooltip_trigger
+
 // TYPOGRAPHY
 // ----------
 .readable
