--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -127,6 +127,12 @@ $default-line-height: 1.4rem
 =tile($color: $dark-gray)
   +tile-default($color)
 
+// TOOLTIPS
+// --------
+
+=tooltip_trigger
+  +tooltip_trigger-default
+
 // TYPOGRAPHY
 // ----------
 
