--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -3,27 +3,27 @@ extends ../../layout
 mixin colors 
   .tooltip_trigger
     a(href="#") Hover&nbsp;
-    .label I'm a tooltip!
+    .tooltip I'm a tooltip!
 
   .tooltip_trigger
     a(href="#") over&nbsp;
-    .label.red I'm a tooltip!
+    .tooltip.tooltip-red I'm a tooltip!
 
   .tooltip_trigger
     a(href="#") any&nbsp;
-    .label.orange I'm a tooltip!
+    .tooltip.tooltip-orange I'm a tooltip!
 
   .tooltip_trigger
     a(href="#") of&nbsp;
-    .label.yellow I'm a tooltip!
+    .tooltip.tooltip-yellow I'm a tooltip!
 
   .tooltip_trigger
     a(href="#") these&nbsp;
-    .label.green I'm a tooltip!
+    .tooltip.tooltip-green I'm a tooltip!
 
   .tooltip_trigger
     a(href="#") words&nbsp;
-    .label.blue I'm a tooltip!
+    .tooltip.tooltip-blue I'm a tooltip!
 
 block hero-title
   h1 Tooltips
