--- a/rails/app/assets/stylesheets/kickstart_rails/core/_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_components.sass
@@ -16,4 +16,5 @@
 @import ../components/_notifications
 @import ../components/_tables
 @import ../components/_tiles
+@import ../components/_tooltips
 @import ../components/_typography
