--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -116,6 +116,9 @@ h1.example-
     width: 600px
     max-width: 95%
 
+  a
+    color: white
+
   form, table, .tile
     text-align: left
     max-width: 360px
