Structure for separating base from dependent components finished

--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -2,9 +2,12 @@
   position: relative
 
   .tooltip
+    +label
     display: none
     position: absolute
     bottom: 100%
+    box-shadow: 0px 0px 3px black
+    pointer-events: none
 
   &:hover
     .tooltip
