--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -78,6 +78,8 @@ $default-line-height: 1.4rem
  * 
  * /
 
+@import ../core/_base_components
+
 // BUTTONS
 // -------
 
@@ -104,6 +106,12 @@ $default-line-height: 1.4rem
 
 =thumbnail
   +thumbnail-default
+
+// LABELS
+// ------
+
+=label
+  +label-default
 
 // MODALS
 // ------
@@ -239,3 +247,5 @@ html, li, p, table
  * that have already been styled by the theme.
  * 
  * /
+
+@import ../core/_dependent_components
