--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -146,8 +146,8 @@ $default-line-height: 1.4rem
 // TOOLTIPS
 // --------
 
-=tooltip_trigger
-  +tooltip_trigger-default
+=tooltip_trigger($background-color: $blue)
+  +tooltip_trigger-default($background-color: $blue)
 
 // TYPOGRAPHY
 // ----------
