--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -1,14 +1,42 @@
-=tooltip_trigger-default()
+=tooltip_trigger-default($background-color: $blue)
   position: relative
+  display: inline-block
+  cursor: pointer
 
   .tooltip
     +label
-    display: none
     position: absolute
+    display: block
+    opacity: 0
     bottom: 100%
-    box-shadow: 0px 0px 3px black
+    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
+    background: $background-color
     pointer-events: none
+    border-color: $blue
+    max-width: 350px
+    min-width: 100px
+    text-align: center
+    left: -30px
+    right: -30px
+    margin: 10px auto
+    transition: all 0.25s
+    transform: translateY(8px)
+
+    &:after
+      border-top: 10px solid $background-color
+      border-left: 10px solid transparent
+      border-right: 10px solid transparent
+      top: 100%
+      width: 0px
+      height: 0px
+      content: ' '
+      display: block
+      background: transparent
+      position: absolute
+      left: 50%
+      margin-left: -8px
 
   &:hover
     .tooltip
-      display: block
+      opacity: 1
+      transform: translateY(0px)
