--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -110,8 +110,8 @@ $default-line-height: 1.4rem
 // LABELS
 // ------
 
-=label
-  +label-default
+=label($background-color: $blue)
+  +label-default($background-color)
 
 // MODALS
 // ------
