--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -152,16 +152,19 @@ block variations
     Tooltips can be positioned to the top, left, right, or bottom.
 
   .tooltip_trigger
-    p Top
+    button.button Top
     span.tooltip I'm on top
+    | &nbsp;
   .tooltip_trigger
-    p Left
+    button.button Left
     span.tooltip.tooltip-left I'm on the left
+    | &nbsp;
   .tooltip_trigger
-    p Right
+    button.button Right
     span.tooltip.tooltip-right I'm on the right
+    | &nbsp;
   .tooltip_trigger
-    p Bottom
+    button.button Bottom
     span.tooltip.tooltip-bottom I'm on the bottom
 
   :markdown
