--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -4,15 +4,13 @@
   cursor: pointer
 
   .tooltip
-    +label
+    +label($background-color)
     position: absolute
     display: block
     opacity: 0
     bottom: 100%
     box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
-    background: $background-color
     pointer-events: none
-    border-color: $blue
     max-width: 350px
     min-width: 100px
     text-align: center
@@ -23,7 +21,8 @@
     transform: translateY(8px)
 
     &:after
-      border-top: 10px solid $background-color
+      border-top-style: solid
+      border-top-width: 10px
       border-left: 10px solid transparent
       border-right: 10px solid transparent
       top: 100%
@@ -35,6 +34,9 @@
       position: absolute
       left: 50%
       margin-left: -8px
+
+    &.tooltip-red
+      +label($red)
 
   &:hover
     .tooltip
