Almost done with tooltips

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -4,17 +4,18 @@ block hero-title
   h1 Buttons
 
 block hero-example
-  .button.red Red
-  | &nbsp;
-  .button.orange Orange
-  | &nbsp;
-  .button.yellow Yellow
-  | &nbsp;
-  .button.green Green
-  | &nbsp;
-  .button.blue Blue
-  | &nbsp;
-  .button.violet Violet
+  div
+    .button.red Red
+    | &nbsp;
+    .button.orange Orange
+    | &nbsp;
+    .button.yellow Yellow
+    | &nbsp;
+    .button.green Green
+    | &nbsp;
+    .button.blue Blue
+    | &nbsp;
+    .button.violet Violet
 
 block meta
   table
