--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -38,6 +38,22 @@
     &.tooltip-red
       +label($red)
 
+    &.tooltip-orange
+      +label($orange)
+
+    &.tooltip-yellow
+      +label($yellow)
+      color: $light-black
+
+    &.tooltip-green
+      +label($green)
+
+    &.tooltip-blue
+      +label($blue)
+
+    &.tooltip-violet
+      +label($violet)
+
   &:hover
     .tooltip
       opacity: 1
