--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -92,6 +92,25 @@
 .label
   +label
 
+  &.label-red
+    +label($red)
+
+  &.label-orange
+    +label($orange)
+
+  &.label-yellow
+    +label($yellow)
+    color: $light-black
+
+  &.label-green
+    +label($green)
+
+  &.label-blue
+    +label($blue)
+
+  &.label-violet
+    +label($violet)
+
 // NAVIGATION
 // ----------
 
