--- a/rails/app/assets/stylesheets/kickstart_rails/components/_status.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_status.sass
@@ -8,9 +8,5 @@
   z-index: 999999
 
   .status
-    background: $yellow
-    color: $black
-    padding: 5px
-    border-radius: 3px
+    +label($yellow)
     text-align: center
-    font-size: 0.75rem
