--- a/lib/sass/components/_labels.sass
+++ b/lib/sass/components/_labels.sass
@@ -1,9 +1,10 @@
 =label-default($background-color: $blue)
   +root-element
   background: $background-color
-  font-size: 0.85rem
+  font-size: 0.8rem
   color: white
   line-height: normal
+  font-weight: bold
 
   &:after
     border-top-color: $background-color
