--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -86,6 +86,31 @@
 .modal
   +modal
 
+// LABELS
+// ------
+
+.label
+  +label
+
+  &.label-red
+    +label($red)
+
+  &.label-orange
+    +label($orange)
+
+  &.label-yellow
+    +label($yellow)
+    color: $light-black
+
+  &.label-green
+    +label($green)
+
+  &.label-blue
+    +label($blue)
+
+  &.label-violet
+    +label($violet)
+
 // NAVIGATION
 // ----------
 
