--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -54,6 +54,15 @@
     &.tooltip-violet
       +label($violet)
 
+    &.tooltip-bottom
+      top: 100%
+      bottom: auto
+
+      &:after
+        bottom: 100%
+        top: auto
+        transform: rotate(180deg)
+
   &:hover
     .tooltip
       opacity: 1
