--- a/rails/app/assets/stylesheets/kickstart_rails/components/_notifications.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_notifications.sass
@@ -8,14 +8,9 @@
   pointer-events: none
 
   .status-bar_status
-    +root-element
-    background: $yellow
+    +label($yellow)
     color: $black
-    border-radius: 3px
-    border-color: transparent
     text-align: center
-    font-size: 0.75rem
-    font-weight: bold
     margin: 5px auto
     max-width: 300px
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15)
@@ -25,7 +20,6 @@
     animation-fill-mode: both
     z-index: 1000
     animation-name: fadeInDown
-    line-height: normal
 
     &[data-type="success"]
       background-color: $green
