--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
@@ -1,12 +1,60 @@
-=tooltip_trigger-default()
+=tooltip_trigger-default($background-color: $blue)
   position: relative
+  display: inline-block
+  cursor: pointer
 
   .tooltip
-    +label
-    display: none
+    +label($background-color)
     position: absolute
+    display: block
+    opacity: 0
     bottom: 100%
+    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
+    pointer-events: none
+    max-width: 350px
+    min-width: 100px
+    text-align: center
+    left: -30px
+    right: -30px
+    margin: 10px auto
+    transition: all 0.25s
+    transform: translateY(8px)
+
+    &:after
+      border-top-style: solid
+      border-top-width: 10px
+      border-left: 10px solid transparent
+      border-right: 10px solid transparent
+      top: 100%
+      width: 0px
+      height: 0px
+      content: ' '
+      display: block
+      background: transparent
+      position: absolute
+      left: 50%
+      margin-left: -8px
+
+    &.tooltip-red
+      +label($red)
+
+    &.tooltip-orange
+      +label($orange)
+
+    &.tooltip-yellow
+      +label($yellow)
+      color: $light-black
+
+    &.tooltip-green
+      +label($green)
+
+    &.tooltip-blue
+      +label($blue)
+
+    &.tooltip-violet
+      +label($violet)
 
   &:hover
     .tooltip
-      display: block
+      opacity: 1
+      transform: translateY(0px)
