Tooltips can now be positioned

--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -191,9 +191,10 @@ block variations
 
   p 
     | Here is&nbsp;
-    span.tooltip_trigger 
+    a.tooltip_trigger(href="#")
       span a very long string of text which uses a tooltip but it's very long, so, you know.
       span.tooltip That's good.
+    |  You can rest assured the block of text keeps going on and on.
 
   :markdown
     <span>
