--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -19,6 +19,7 @@
     margin: 10px auto
     transition: all 0.25s
     transform: translateY(8px)
+    z-index: 10
 
     &:after
       border-top-style: solid
@@ -62,6 +63,34 @@
         bottom: 100%
         top: auto
         transform: rotate(180deg)
+
+    &.tooltip-left
+      right: 100%
+      left: auto
+
+      &:after
+        transform: rotate(-90deg)
+        left: 100%
+
+    &.tooltip-right
+      left: 100%
+      right: auto
+
+      &:after
+        transform: rotate(90deg)
+        left: auto
+        right: 100%
+        margin:
+          left: 0
+          right: -8px
+
+    &.tooltip-right, &.tooltip-left
+      top: 0
+      bottom: auto
+      margin: 0
+
+      &:after
+        top: 8px
 
   &:hover
     .tooltip
