--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -15,28 +15,28 @@
 .button, button, input[type=submit]
   +button
   // TODO: Make loop
-  &.primary
+  &.button-primary
     +button($primary-color)
 
-  &.secondary
+  &.button-secondary
     +button($secondary-color)
 
-  &.red
+  &.button-red
     +button($red)
 
-  &.orange
+  &.button-orange
     +button($orange)
 
-  &.yellow
+  &.button-yellow
     +button($yellow)
 
-  &.green
+  &.button-green
     +button($green)
 
-  &.blue
+  &.button-blue
     +button($blue)
 
-  &.violet
+  &.button-violet
     +button($violet)
 
 // FORMS
