--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -1,9 +1,12 @@
-=html-default
+=type-default
   font-family: $default-font
   font-size: $default-font-size
   font-size: calc(#{$default-font-size - 2} + #{$scalingFactor})
   line-height: $default-line-height
   line-height: calc(#{$default-line-height} + #{$scalingFactor})
+
+html 
+  color: $lighter-black
 
 ul
   margin-bottom: $space
@@ -11,7 +14,6 @@ ul
 h1, h2, h3, h4, h5, h6, p
   margin: 0
   line-height: normal
-  color: $lighter-black
 
 p
   margin: 0
