--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -10,6 +10,12 @@
 
 // Assign mixins to static classes
 
+// ALERTS
+// ------
+
+.alert
+  +alert
+
 // BUTTONS
 // -------
 .button, button, input[type=submit]
