--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -10,33 +10,39 @@
 
 // Assign mixins to static classes
 
+// ALERTS
+// ------
+
+.alert
+  +alert
+
 // BUTTONS
 // -------
 .button, button, input[type=submit]
   +button
   // TODO: Make loop
-  &.primary
+  &.button-primary
     +button($primary-color)
 
-  &.secondary
+  &.button-secondary
     +button($secondary-color)
 
-  &.red
+  &.button-red
     +button($red)
 
-  &.orange
+  &.button-orange
     +button($orange)
 
-  &.yellow
+  &.button-yellow
     +button($yellow)
 
-  &.green
+  &.button-green
     +button($green)
 
-  &.blue
+  &.button-blue
     +button($blue)
 
-  &.violet
+  &.button-violet
     +button($violet)
 
 // FORMS
