--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -80,6 +80,12 @@ $default-line-height: 1.4rem
 
 @import ../core/_base_components
 
+// ALERTS
+// ------
+
+=alert
+  +alert-default
+
 // BUTTONS
 // -------
 
@@ -221,11 +227,11 @@ h5
 h6
   +xxs-heading
 
-=html
-  +html-default
+=type
+  +type-default
 
 html, li, p, table
-  +html
+  +type-default
 
 
 /*
