--- a/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
@@ -7,6 +7,7 @@
 
 // Components
 @import ../components/_root-element
+@import ../components/_alerts
 @import ../components/_buttons
 @import ../components/_forms
 @import ../components/_images
