--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -80,6 +80,12 @@ $default-line-height: 1.4rem
 
 @import ../core/_base_components
 
+// ALERTS
+// ------
+
+=alert
+  +alert-default
+
 // BUTTONS
 // -------
 
