--- a/lib/sass/components/_modals.sass
+++ b/lib/sass/components/_modals.sass
@@ -9,7 +9,7 @@
   margin: 0px auto
   display: none
   background: white
-  border-color: $dark-white
+  border-color: map-get($white, dark)
   animation-duration: 0.25s
   animation-delay: 0.2s
   animation-timing-function: ease
