--- a/lib/sass/components/_tooltips.sass
+++ b/lib/sass/components/_tooltips.sass
@@ -44,7 +44,7 @@
 
     &.tooltip-yellow
       +label($yellow)
-      color: $light-black
+      color: map-get($black, light)
 
     &.tooltip-green
       +label($green)
