--- a/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
@@ -1,9 +1,12 @@
-=html-default
+=type-default
   font-family: $default-font
   font-size: $default-font-size
   font-size: calc(#{$default-font-size - 2} + #{$scalingFactor})
   line-height: $default-line-height
   line-height: calc(#{$default-line-height} + #{$scalingFactor})
+
+html 
+  color: map-get($black, lighter)
 
 ul
   margin-bottom: $space
@@ -11,7 +14,6 @@ ul
 h1, h2, h3, h4, h5, h6, p
   margin: 0
   line-height: normal
-  color: $lighter-black
 
 p
   margin: 0
@@ -80,7 +82,7 @@ a
 
 =page-heading-default
   h1, h2, h3, h4, h5, h6
-    border-bottom: 1px solid $darker-white
+    border-bottom: 1px solid map-get($white, darker)
     padding-bottom: $space/2
 
 =xxl-heading-default
