--- a/lib/sass/components/_tiles.sass
+++ b/lib/sass/components/_tiles.sass
@@ -1,5 +1,5 @@
-=tile-default ($color: $dark-gray)
-  box-shadow: 0px 0px 3px $gray
+=tile-default ($color: map-get($gray, dark))
+  box-shadow: 0px 0px 3px gray
   background-color: white
   +root-element
   display: block
@@ -19,13 +19,13 @@
   > h1, > h2, > h3, > h4, > h5
     color: $color
     @if $color == transparent
-      color: $black
+      color: black
 
   h1
     font-size: 1.15rem
 
   .ks-close
     text-decoration: none
-    color: $gray
+    color: gray
     font-weight: bold
     float: right
