--- a/rails/app/assets/stylesheets/kickstart_rails/components/_alerts.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_alerts.sass
@@ -1,7 +1,10 @@
 =alert-default
+  +root-element
   padding: $space/2
   background: $primary-color
   color: white
+  margin:
+    bottom: $space
 
   > *:last-child
     margin-bottom: 0
