--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -18,7 +18,7 @@
 
 =thumbnail-default
   +root-element
-  border: 1px solid $darker-white
+  border: 1px solid map-get($white, darker)
   display: inline-block
 
   figcaption
