--- a/rails/app/assets/stylesheets/kickstart_rails/components/_notifications.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_notifications.sass
@@ -9,7 +9,7 @@
 
   .status-bar_status
     +label($yellow)
-    color: $black
+    color: black
     text-align: center
     margin: 5px auto
     max-width: 300px
