--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tables.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tables.sass
@@ -3,7 +3,7 @@
   background: white
   border-spacing: 0
   empty-cells: show
-  border: 1px solid $light-gray
+  border: 1px solid map-get($gray, light)
   width: 100%
   margin-bottom: $space
 
@@ -11,8 +11,8 @@
     margin: 0
 
   thead
-    background: $dark-white
-    color: $black
+    background: map-get($white, dark)
+    color: black
     text-align: left
     vertical-align: bottom
     th
@@ -20,7 +20,7 @@
 
   th, td
     background-color: transparent
-    border-left: 1px solid $light-gray
+    border-left: 1px solid map-get($gray, light)
     border-width: 0 0 0 1px
     font-size: inherit
     margin: 0
@@ -32,4 +32,4 @@
       border-left-width: 0
 
   tbody tr:nth-child(2n)
-    background-color: lighten($light-gray, 50%)
+    background-color: lighten(map-get($gray, light), 50%)
